--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -23,7 +23,7 @@
   <div id="relayPointContainer" class="flex flex-col gap-1" style="display: none;">
     <%= image_tag "/images/arrow.png", alt: "arrow", class: "h-5 w-5 ml-25" %>
     <div class="flex items-center gap-4">
-      <button id="relayPoint" class="btn_effect px-4 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">中継地</button>
+      <button id="relayPoints" class="btn_effect px-4 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">中継地</button>
       <div class="flex flex-col gap-1">
         <span class="font-bold text-[#624007]">中継</span>
         <select id="relayHour" class="select select-bordered select-sm w-20 bg-white border-[#9A6812]">
