駐車場検索ボタンをmode::carの時のみ表示

--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -22,6 +22,6 @@
 </div>
 
 <div class="mt-15">
-  <%= render 'shared/route_points' %>
+  <%= render 'shared/route_points', mode: :car %>
   <div id="map"></div>
 </div>
