ルートリセット機能

--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -9,6 +9,7 @@
     <div class="flex items-center space-x-2 justify-center  mt-2">            
       <button id="carDrawRoute" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold btn_effect">ルート検索</button>
       <button id="searchNearby" class="px-4 py-2 bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold btn_effect">駐車場を探す</button>
+      <button id="resetRouteBtn" class="btn btn-danger">ルートをリセット</button>
     </div>
   </div>
 
