--- a/app/views/routes/walk.html.erb
+++ b/app/views/routes/walk.html.erb
@@ -14,6 +14,7 @@
   <%= link_to walk_navigation_routes_path, data: { barba: "link" } do %>
     <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"btn_effect navi_btn" %>
   <% end %>
+  <button id="resetRouteBtn" class="btn btn-danger mt-2">ルートをリセット</button>
 </div>
 
 <div class="mt-15">
