--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -1,6 +1,6 @@
 <div class="point-selector flex flex-wrap items-center justify-center gap-4">
   <div class="flex items-center gap-4">
-    <button id="startPoint" class="btn_effect px-4 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">現在地</button>
+    <button id="startPoint" class="btn_effect px-4 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">出発地</button>
     <div class="flex items-center gap-2">
       <div class="flex flex-col gap-1">
         <span class="font-bold text-[#624007]">出発</span>
