--- a/app/views/routes/car.html.erb
+++ b/app/views/routes/car.html.erb
@@ -19,6 +19,7 @@
   <%= link_to car_navigation_routes_path do %>
     <%= image_tag "/images/startNavi.png", alt: "startNavi", class:"btn_effect navi_btn mt-5" %>
   <% end %>
+  <button id="resetRouteBtn" class="btn btn-danger mt-2">ルートをリセット</button>
 </div>
 
 <div class="mt-15">
