--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -29,10 +29,10 @@
       <div class="flex items-center gap-1">
         <div class="flex items-center gap-1">
           <div class="flex flex-col gap-1">
-            <span class="font-bold text-[#624007]">中継点到着時間</span>
-            <select id="relayHour_${index}" class="relay-hour-select select select-bordered select-sm w-20 bg-white border-[#9A6812]"
+            <span class="font-bold text-[#624007]">中継点到着</span>
+            <select id="relayArrivalHour_${index}" class="relay-hour-select select select-bordered select-sm w-20 bg-white border-[#9A6812]" disabled
                     data-options="<%= options_for_select((0..23).map { |h| format('%02d', h) }).to_json %>"></select>
-            <select id="relayMinute_${index}" class="relay-minute-select select select-bordered select-sm w-20 bg-white border-[#9A6812]"
+            <select id="relayArrivalMinute_${index}" class="relay-minute-select select select-bordered select-sm w-20 bg-white border-[#9A6812]" disabled
                     data-options="<%= options_for_select((0..59).map { |m| format('%02d', m) }).to_json %>"></select>
           </div>
           <div class="flex flex-col gap-1">
@@ -43,10 +43,10 @@
                     data-options="<%= options_for_select((0..59).map { |m| format('%02d', m) }).to_json %>"></select>
           </div>
           <div class="flex flex-col gap-1">
-            <span class="font-bold text-[#624007]">中継点出発時間</span>
-            <select id="stayHour_${index}" class="stay-hour-select select select-bordered select-sm w-20 bg-white border-[#9A6812]"
+            <span class="font-bold text-[#624007]">中継点出発</span>
+            <select id="relayDeptHour_${index}" class="relay-dept-hour-select select select-bordered select-sm w-20 bg-white border-[#9A6812]" disabled
                     data-options="<%= options_for_select((0..23).map { |h| format('%02d', h) }).to_json %>"></select>
-            <select id="stayMinute_${index}" class="stay-minute-select select select-bordered select-sm w-20 bg-white border-[#9A6812]"
+            <select id="relayDeptMinute_${index}" class="relay-dept-minute-select select select-bordered select-sm w-20 bg-white border-[#9A6812]" disabled
                     data-options="<%= options_for_select((0..59).map { |m| format('%02d', m) }).to_json %>"></select>
           </div>
           <div class="flex flex-col gap-1">
