save_routeモデルの作成

--- a/app/views/shared/_route_form_header.html.erb
+++ b/app/views/shared/_route_form_header.html.erb
@@ -16,8 +16,8 @@
         <%= image_tag "/images/go_to_car.png",alt: "go_to_car", class: "btn_effect h-20" %>
       <% end %>
     <% end %>
-    <button id="saved_location" class="appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
-      <%= image_tag "/images/saved_location.png", alt: "saved_location", class: "btn_effect h-10 -mt-1" %>
+    <button id="saveRouteBtn" class="appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
+      <%= image_tag "/images/save_route.png", alt: "save_route", class: "btn_effect h-10 -mt-1" %>
     </button>
   </div>
 </div> 
