--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -35,9 +35,9 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <%= link_to save_routes_path, class: "nav-link" do %>
               <img src="/images/routes_logo.png" alt="routes_logo" class="h-10">
-            </a>
+            <% end %>
           </li>
 
           <li class="nav-item">
