保存した地点の名前を表示する

--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -12,18 +12,18 @@
           <p><strong>実行日:</strong> <%= @save_route.execution_date.strftime('%Y年%m月%d日') %></p>
         <% end %>
 
-        <p><strong>出発点:</strong><%= @save_route.startPoint.name %></p>
+        <p><strong>出発点:</strong><%= @save_route.start_point['name'] %></p>
 
         <% if @save_route.waypoints.present? %>
           <p><strong>経由地:</strong></p>
           <ul class="list-disc list-inside pl-4">
             <% @save_route.waypoints.each do |waypoint| %>
-              <li><%= waypoint %></li>
+              <li><%= waypoint['name'] %></li>
             <% end %>
           </ul>
         <% end %>
 
-        <p><strong>到着点:</strong><%= @save_route.endPoint.name%></p>
+        <p><strong>到着点:</strong><%= @save_route.end_point['name'] %></p>
       </div>
     </div>
   </div>
