--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -41,5 +41,13 @@
     <%= link_to '編集', edit_save_route_path(@save_route), class: "btn-warning" %>
     <%= button_to '削除', @save_route, method: :delete, class: "btn btn-sm btn-error", form: { data: { turbo_confirm: '本当に削除しますか？', "barba-prevent": "all" } } %>
     <%= link_to '一覧に戻る', save_routes_path, class: "btn btn-ghost" %>
+    <%= button_tag 'すぐ出発する',
+      # data属性にルート情報をJSON形式で埋め込む
+      id: 'start-navigation-from-saved-route',
+      class: 'btn btn-primary',
+      data: {
+        route: @save_route.to_json(only: [:travel_mode, :start_point, :end_point, :waypoints])
+      }
+    %>
   </div>
 </div>
