--- a/app/views/save_routes/index.html.erb
+++ b/app/views/save_routes/index.html.erb
@@ -18,6 +18,7 @@
         <thead>
           <tr>
             <th>名前</th>
+            <th>移動手段</th>
             <th class="text-right"></th>
           </tr>
         </thead>
