保存したルートの時刻をDBカラムに追加

--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -11,6 +11,10 @@
           <p><strong>実行日:</strong> <%= @save_route.execution_date.strftime('%Y年%m月%d日') %></p>
         <% end %>
 
+        <% if @save_route.start_time.present? %>
+          <p><strong>出発時刻:</strong> <%= @save_route.start_time.strftime('%H:%M') %></p>
+        <% end %>
+
         <% if @save_route.travel_mode.present? %>
           <p><strong>移動手段:</strong>
             <%= case @save_route.travel_mode
@@ -29,6 +33,9 @@
               <li>
                 <%# dig: ネスト（入れ子）になったハッシュや配列から、安全かつ簡潔に値を取り出すためのメソッド %>
                 <%= waypoint.dig('mainPoint', 'name') %>
+                <% if waypoint['arrival_time'].present? %>
+                  <span class="text-sm text-gray-500 ml-2"><%= Time.zone.parse(waypoint['arrival_time']).strftime('%H:%M') %>頃着</span>
+                <% end %>
                 <% if waypoint['parkingLot'].present? %>
                   <span class="text-sm text-gray-500 ml-2">(P: <%= waypoint.dig('parkingLot', 'name') %>)</span>
                 <% end %>
@@ -39,6 +46,9 @@
 
         <p><strong>到着点:</strong>
           <%= @save_route.end_point.dig('mainPoint', 'name') %>
+          <% if @save_route.end_point['arrival_time'].present? %>
+            <span class="text-sm text-gray-500 ml-2"><%= Time.zone.parse(@save_route.end_point['arrival_time']).strftime('%H:%M') %>頃着</span>
+          <% end %>
           <% if @save_route.end_point['parkingLot'].present? %>
             <span class="text-sm text-gray-500 ml-2">(P: <%= @save_route.end_point.dig('parkingLot', 'name') %>)</span>
           <% end %>
@@ -55,6 +65,11 @@
       </div>
     </div>
   </div>
+  <div id="route-data"
+       data-route="<%= @save_route.to_json(only: [:travel_mode, :start_point, :end_point, :waypoints]) %>"
+       style="display: none;">
+  </div>
+  <div id="map"></div>
 
   <div class="mt-6 flex items-center space-x-2">
     <%= link_to '編集', edit_save_route_path(@save_route), class: "btn-warning" %>
@@ -72,9 +87,4 @@
       }
     %>
   </div>
-  <div id="route-data"
-       data-route="<%= @save_route.to_json(only: [:travel_mode, :start_point, :end_point, :waypoints]) %>"
-       style="display: none;">
-  </div>
-  <div id="map"></div>
 </div>
