--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -91,7 +91,7 @@
     %>
     <%# 実行日と出発時刻、そしてユーザーがLINE連携済みの場合のみタイマー設定ボタンを表示 %>
     <% if @save_route.execution_date.present? && @save_route.start_time.present? && current_user.line_connected? %>
-      <%= button_to '出発5分前にLINE通知', save_route_notifications_path(@save_route), method: :post, class: "btn btn-info", form: { data: { turbo_confirm: "出発5分前にLINE通知を設定します。よろしいですか？" } } %>
+      <%= button_to 'LINE通知', save_route_notifications_path(@save_route), method: :post, class: "btn btn-info", form: { data: { turbo_confirm: "出発5分前にLINE通知を設定します。よろしいですか？" } } %>
     <% end %>
   </div>
 </div>
