--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -93,5 +93,10 @@
     <% if @save_route.execution_date.present? && @save_route.start_time.present? && current_user.line_connected? %>
       <%= button_to 'LINE通知', save_route_notifications_path(@save_route), method: :post, class: "btn btn-info", form: { data: { turbo_confirm: "出発5分前にLINE通知を設定します。よろしいですか？" } } %>
     <% end %>
+
+    <%# LINE未連携の場合のみ連携ボタンを表示 %>
+    <% unless current_user.line_user_id.present? %>
+      <button id="line-linkage-button" class="btn btn-success">LINEを連携する</button>
+    <% end %>
   </div>
 </div>
