--- a/app/views/save_routes/show.html.erb
+++ b/app/views/save_routes/show.html.erb
@@ -79,7 +79,6 @@
     <%= button_to '削除', @save_route, method: :delete, class: "btn btn-sm btn-error", form: { data: { turbo_confirm: '本当に削除しますか？', "barba-prevent": "all" } } %>
     <%= link_to '一覧へ', save_routes_path, class: "btn btn-ghost" %>
     <%= button_tag 'すぐ出発',
-      # data属性にルート情報をJSON形式で埋め込む
       # data属性:HTML要素に自由なデータを埋め込み、JavaScriptで使えるようにする仕組み
       id: 'start-navigation-from-saved-route',
       class: 'btn btn-primary',
@@ -96,7 +95,7 @@
 
     <%# LINE未連携の場合のみ連携ボタンを表示 %>
     <% unless current_user.line_messaging_user_id.present? %>
-      <button id="line-linkage-button" class="btn btn-success" data-api-url="<%= api_v1_line_linkage_new_path %>" data-barba-prevent="all">LINEを連携する</button>
+      <%= link_to 'LINEを連携する', new_api_v1_line_linkage_path, class: "btn btn-success" %>
     <% end %>
   </div>
 </div>
