カレンダーに必要なファイルの生成

--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -16,6 +16,7 @@
 @import "./components/character.css";
 @import "./components/slider.css"; 
 @import "./components/navbar_custom.css";
+@import "./components/calendar.css";
 /* @import "./pages/top.css"; */
 
 body {
