--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,7 +42,7 @@
 
           <li class="nav-item">
             <a class="nav-link" href="#">
-              <img src="/images/parkings_logo.png" alt="parkings_logo" class="h-10">
+              <img src="/images/calender_logo.png" alt="calender_logo" class="h-10">
             </a>
           </li>
 
