calendar_controller.rb記述

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -41,9 +41,9 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="#">
+            <%= link_to calendar_path, class: "nav-link" do %>
               <img src="/images/calender_logo.png" alt="calender_logo" class="h-10">
-            </a>
+            <% end %>
           </li>
 
           <li class="nav-item">
