コントローラーファイル名修正

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -42,7 +42,7 @@
 
           <li class="nav-item">
             <%= link_to calendar_path, class: "nav-link" do %>
-              <img src="/images/calender_logo.png" alt="calender_logo" class="h-10">
+              <img src="/images/calendar.png" alt="calendar" class="h-10">
             <% end %>
           </li>
 
