--- a/app/views/calendars/index.html.erb
+++ b/app/views/calendars/index.html.erb
@@ -1,3 +1,3 @@
 <%# Stimulusコントローラを適用するdiv要素のみを残します %>
-<div id="calendar" data-controller="calendar" data-calendar-events-value="<%= @events.to_json %>"></div>
+<div id="calendar" data-controller="calendar" data-calendar-events-value="<%= @events.to_json %>" class="calendar"></div>
 <%= link_to 'マップへ戻る', new_route_path, class: "btn_effect bg-white text-black border-3 border-[#9A6812] rounded-md shadow-md font-bold no-underline" %>
