--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -1,8 +1,17 @@
+  <%# 'mode'ローカル変数に応じて表示を切り替える %>
+  <% if defined?(mode) && mode == :walk %>
+    <%= link_to car_routes_path do %>
+      <%= image_tag "/images/how_to_go_walk.png", alt: "go_walk", class: "btn_effect h-18" %>
+    <% end %>
+  <% else %>
+    <%= link_to walk_routes_path do %>
+      <%= image_tag "/images/how_to_go_car.png", alt: "go_to_car", class: "btn_effect h-18" %>
+    <% end %>
+  <% end %>
 <div class="point-selector flex flex-wrap items-center justify-center gap-2">
   <div class="flex flex-col gap-1">
     <button id="startPoint" class="btn_effect px-4 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">出発地</button>
-    <div class="flex flex-col gap-1">
-      <span class="font-bold text-[#624007]">出発</span>
+    <div class="flex items-center gap-1">
       <select id="startHour" class="select select-bordered select-sm w-20 bg-white border-[#9A6812]">
         <option disabled selected>時</option>
         <% (0..23).each do |h| %>
@@ -15,6 +24,7 @@
           <option><%= format('%02d', m) %></option>
         <% end %>
       </select>
+      <span class="font-bold text-[#624007]">発</span>
     </div>
   </div>
 
@@ -58,7 +68,7 @@
     <button id="destinationPoint" class="btn_effect px-4 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">目的地</button>
     <div class="flex items-center gap-2">
       <div class="flex flex-col gap-1">
-        <span class="font-bold text-[#624007]">到着</span>
+        <span class="font-bold text-[#624007]">着</span>
         <select id="destinationHour" class="select select-bordered select-sm w-20 bg-white border-[#9A6812]">
           <option disabled selected>時</option>
           <% (0..23).each do |h| %>
