移動手段の位置移動

--- a/app/views/shared/_route_points.html.erb
+++ b/app/views/shared/_route_points.html.erb
@@ -1,3 +1,5 @@
+
+<div class="point-selector flex flex-wrap items-center justify-center gap-2">
   <%# 'mode'ローカル変数に応じて表示を切り替える %>
   <% if defined?(mode) && mode == :walk %>
     <%= link_to car_routes_path do %>
@@ -8,7 +10,7 @@
       <%= image_tag "/images/how_to_go_car.png", alt: "go_to_car", class: "btn_effect h-18" %>
     <% end %>
   <% end %>
-<div class="point-selector flex flex-wrap items-center justify-center gap-2">
+
   <div class="flex flex-col gap-1">
     <button id="startPoint" class="btn_effect px-4 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">出発地</button>
     <div class="flex items-center gap-1">
@@ -39,15 +41,15 @@
       <div class="flex items-center gap-1">
         <div class="flex items-center gap-1">
           <div class="flex flex-col gap-1">
-            <span class="font-bold text-[#624007]">中継点(着)</span>
             <span class="relay-arrival-time"></span>
           </div>
-          <div class="flex flex-col gap-1">
+          <div class="flex flex-items gap-1">
             <span class="font-bold text-[#624007]">滞在時間</span>
             <select id="stayHour_${index}" class="stay-hour-select select select-bordered select-sm w-20 bg-white border-[#9A6812]"
                     data-options="<%= options_for_select((0..23).map { |h| format('%02d', h) }).to_json %>"></select>
             <select id="stayMinute_${index}" class="stay-minute-select select select-bordered select-sm w-20 bg-white border-[#9A6812]"
                     data-options="<%= options_for_select((0..59).map { |m| format('%02d', m) }).to_json %>"></select>
+            <span class="font-bold text-[#624007]">中継点(着)</span>
           </div>
           <div class="flex flex-col gap-1">
             <button class="remove-relay-point-btn text-red-500 text-xl btn_effect bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold w-6 h-6 flex items-center justify-center p-0">×</button>
@@ -67,8 +69,7 @@
   <div class="flex flex-col gap-1">
     <button id="destinationPoint" class="btn_effect px-4 py-2 bg-white border-3 border-[#9A6812] rounded-md shadow-md font-bold">目的地</button>
     <div class="flex items-center gap-2">
-      <div class="flex flex-col gap-1">
-        <span class="font-bold text-[#624007]">着</span>
+      <div class="flex flex-items gap-1">
         <select id="destinationHour" class="select select-bordered select-sm w-20 bg-white border-[#9A6812]">
           <option disabled selected>時</option>
           <% (0..23).each do |h| %>
@@ -81,6 +82,7 @@
             <option><%= format('%02d', m) %></option>
           <% end %>
         </select>
+        <span class="font-bold text-[#624007]">着</span>
       </div>
       <% if local_assigns.fetch(:mode, nil) == :car %>
         <button class="search-nearby-parking-btn appearance-none bg-transparent border-none" data-point-type="destination">
