--- a/app/views/shared/_route_form_header.html.erb
+++ b/app/views/shared/_route_form_header.html.erb
@@ -6,8 +6,8 @@
     <button id="saveRouteBtn" class="appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]" data-save-route-url="<%= save_routes_path %>">
       <%= image_tag "/images/save_route.png", alt: "save_route", class: "btn_effect h-10 -mt-1" %>
     </button>
-    <button id="setTimeBtn" class="appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
-      <%= image_tag "/images/set_time.png", alt: "set_time", class: "btn_effect h-10 -mt-1" %>
+    <button id="<%= mode == :car ? 'carDrawRoute' : 'walkDrawRoute' %>" class="appearance-none bg-transparent border-none p-0 m-0 mr-[-1rem]">
+      <%= image_tag "/images/search_route.png", alt: "search_route", class: "btn_effect h-10 -mt-1" %>
     </button>
   </div>
 </div> 
